Fixed the carousel right button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
 
-<div id="bCarousel" class="carousel slide" data-ride="carousel">
+<div id="myCarousel" class="carousel slide" data-ride="carousel" style="height:50%!important">
 
 	<!--indicators-->
 	<ol class="carousel-indicators">
@@ -41,17 +41,44 @@
 	
 	
 	<!-- Left and Right Controls -->
-	<a class="left carousel-control" href="#bCarousel" data-slide="prev">
+	<a class="left carousel-control" href="#myCarousel" data-slide="prev">
 	<span class="glyphicon glyphicon-chevron-left"> </span>
-	
-	<a class="right carousel-control" href="#bCarousel" data-slide="next">
+	</a>
+	<a class="right carousel-control" href="#myCarousel" data-slide="next">
 	<span class="glyphicon glyphicon-chevron-right"> </span>
-	
+	</a>
 	</div>
 		
 </div>
+</br>
+</br>
+
 
 <div class="container">
+
+	<div class="navbar navbar-default">
+	
+		<div class="container fluid">
+		
+			<div class="navbar-header">
+			
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+			
+			
+	
+			
+			</div>
+		
+		
+		
+		
+		</div>
+	
+	</div>
+
+
+
+
 
 </div>
 
